api/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todomvc-api
spec:
  hosts:
    - todo.red-badger.com
  gateways:
    - istio-system/todo-gateway
  http:
    - match:
        - uri:
            prefix: "/api/"
        - uri:
            exact: "/api"
      # rewrite:
      #   uri: "/v1.0/invoke/api/method/"
      # route:
      #   - destination:
      #       port:
      #         number: 80
      #       host: api-dapr
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 80
            host: todomvc-api
